# my-agent

./: .env.template  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pathsetup.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_env.ps1  run_local_test.ps1  run_local_test.py  test_db.py  test_lifespan.py
.agents/: AGENTS.md
app/: main.py  models.py
config/: approval_policy.json  embedding_config.json  llm_config.json
data/: my_agent.db
design_docs/: admin_dashboard_design.md  admin_dashboard_implementation_plan.md  ai_lore_generator_plan.md  auth_telegram_design.md  auth_telegram_integration.md  auth_telegram_plan.md  code_review_2026-07-10.md  code_review_implementation_plan.md  code_review_report.md  db_migration_and_download_design.md  db_migration_and_download_implementation_plan.md  development_log.md  frontend_rebuild_plan.md  frontend_rebuild_review.md  implementation_roadmap.md  product_spec.md  project_concept.md  remaining_work_2026-07-10.md  research_agent_design.md  research_agent_implementation_plan.md  reviewer_agent_plan.md  sprint_board.md  supplementary_design_specs.md  tech_stack.md
docs/: llm-implementation-plan.md  llm-step-01-llm-abstraction-spec.md  llm-step-02-prompt-system-spec.md  llm-step-03-scene-writer-spec.md  llm-step-04-planner-agents-spec.md  llm-step-05-episode-agents-spec.md  llm-step-06-logging-spec.md  llm-step-07-workflow-integration-spec.md  llm-step-08-finalization-spec.md  ui-implementation-spec.md  ui-improvement-plan.md  usage_guide.md
scripts/: run.sh  (+8 more)
(+159 files in other folders)
